--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
         </header>
         <main>
             <ul id="music-container">
-                <li v-for="album in albums" v-if="(album.genre == selected) || (selected == 'All')">
-                    <img :src="album.poster" alt="album">
+                <li v-for="(album,index) in albums" v-if="((album.genre == selected) || (selected == 'All')) && (seen == -1 || seen == index)" :class="(seen == index)? 'big' : ''">
+                    <img :src="album.poster" alt="album" @click="albumDetails(index)">
                     <h3>{{album.title}}</h3>
                     <h4>{{album.author}}<br>{{album.year}}</h4>
                 </li>
+                <li v-for="(album,index) in albums" v-if="seen == index" class="details"></li>
             </ul>
         </main>
     </div>
